# earn-protocol

./: .env.example  .gitignore  AGENT_SDK.md  API_SUMMARY.md  ARCHITECTURE.md  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEMO_SCRIPT.md  DEVNET_STATUS.md  DOCS-CONTENT.md  Dockerfile  FEE_ANALYSIS.md  JUDGE_QA.md  LICENSE  PUMPFUN_RESEARCH.md  README.md  REFACTOR-PLAN.md  RELIABILITY.md  SETUP-SUPABASE.md  SKILL-NEW.md  SKILL.md  SOLANA-SKILL.md  SPEC.md  STAKING_DESIGN.md  STAKING_ECONOMICS.md  SUBMISSION.md  TWEET_THREAD.md  buy-test.ts  check-all-accounts.ts  check-balances.ts  check-state.ts  check-token-balance.ts  jest.config.js  package-lock.json  package.json  programmatic-buy.ts  programmatic-sell.ts  render.yaml  (+5 more)
.github/workflows/: deploy-devnet.yml
api/: birdeye.ts  buyback.ts  crank.ts  data-endpoints.ts  helius.ts  package.json  server.ts  staking-client.ts  supabase-schema.sql  supabase.ts  test.ts  token-data.ts  vercel.json
cli/: README.md
docs/integrations/: agentdex.md
examples/: agent-launch-demo.ts
mcp/: README.md  chrome-devtools-client.ts  index.ts  test-chrome-devtools.ts
mcp/examples/: basic-usage.ts
programs/earn-protocol/: Cargo.toml
programs/earn-protocol/src/: errors.rs  events.rs  lib.rs
programs/earn-protocol/src/instructions/: buyback.rs  claim.rs  collect_fee.rs  collect_fee_from_swap.rs  mod.rs  register.rs  stake.rs  unstake.rs
programs/earn-protocol/src/state/: mod.rs  staking.rs  token_config.rs  treasury.rs
programs/earn-staking/: Cargo.toml
programs/earn-staking/src/: errors.rs  lib.rs
programs/earn-staking/src/instructions/: cancel_unstake.rs  claim.rs  create_pool.rs  deposit_rewards.rs  initialize.rs  mod.rs  request_unstake.rs  stake.rs  unstake.rs  update_rewards.rs
programs/earn-staking/src/state/: global_config.rs  mod.rs  stake_account.rs  staking_pool.rs
scripts/: deploy-devnet.sh  init-staking.ts  launch-token-pumpfun.ts  register-test-token.ts  run-crank.sh  standalone-launch.ts  test-pumpfun-launch.ts
skill/earn-protocol/: SKILL.md
social/: README.md  activity-log.ts  cli.ts  config.ts  cron-daemon.ts  engagement-engine.ts  moltbook-client.ts
sql/: fee_claims.sql
src/: api.ts  index.ts  protocol.ts  sdk.ts  swap.ts  types.ts
tests/: api.test.ts  earn-protocol.ts  full-flow-test.ts  test-onboard.ts  test-swap.ts
(+4 files in other folders)
