[workspace]
members = [
    "programs/earn-staking"
]
resolver = "2"

[workspace.dependencies]
blake3 = "=1.5.0"
constant_time_eq = "=0.3.0"
wit-bindgen = "=0.36.0"
wasi = "=0.11.0+wasi-snapshot-preview1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
