[package]
name = "earn-protocol"
version = "0.1.0"
description = "Tokenomics-as-a-Service for Memecoins"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "earn_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
