[package]
name = "earn-staking"
version = "0.1.0"
description = "Universal staking program for Earn Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "earn_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.0", features = ["token_2022", "associated_token"] }
blake3 = "=1.5.0"
constant_time_eq = "=0.3.0"
